# hkatalog

./: .gitignore  Dockerfile  HKatalog.hs  HSpecTests.hs  README.md  hkatalog.cabal
Datacatalog/: Core.hs  Persist.hs  Time.hs
resources/: mini-dcatalog.clj
test/: CoreSpec.hs  HKatalogSpec.hs
