Name:                   hkatalog
Version:                0.0.0.0
License:                BSD3
License-File:           LICENSE
Cabal-Version:          >=1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      HKatalog
  Build-Depends:        base >= 4 && < 5
                      , array

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        HKatalogSpec
  Build-Depends:        base
                      , hspec >= 1.3
                      , QuickCheck
                      , hkatalog

Source-Repository head
  Type:                 git
  Location:             https://github.com/txominpelu/hkatalog.git
